--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to "#{title}"
+  p The Proverbs #{todaysDate} verse for you today is:
+  p #{verses[0]}
