--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title= title
+    link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+
+    script(src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js")
