--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,4 @@
-var _ = require('')
-extends layout
+extends layout.pug
 
 block content
   div.row.text-center
@@ -9,11 +8,11 @@ block content
 
       #message
 
-      p &nbsp;
-      div
+      //p &nbsp;
+      //div
 
-        button#previous.btn.btn-default.btn-lg Previous
-        button#next.btn.btn-default.btn-lg Next
+        //button#previous.btn.btn-default.btn-lg Previous
+        //button#next.btn.btn-default.btn-lg Next
 
 
 
